# perceptual-jp-colormaps

./: .gitignore  LICENSE  README.md  __init__.py  publish.sh  pyproject.toml  setup.cfg
.github/workflows/: python-package.yml
core/: core.py  maps.py  readme.py
load/: load.py
src/: README.md
src/jpcm/: .gitignore  __init__.py
src/jpcm/core/: core.py  func.py  maps.py  readme.py  savitzky_golay.py  utils.py
src/jpcm/draw/: draw.py  static_plot.py
src/jpcm/load/: load.py
test/: test.py  test_jpcm.py
