[metadata]
name = jpcm
version = 0.0.12
author = Akhil Sadam
author_email = sadam.akhil@gmail.com
description = A perceptually uniform colormap generator for Matplotlib equipped with traditional-ish Japanese colors to serve as a fixed color palette.(Culture appropriation at its finest.)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akhilsadam/perceptual-jp-colormaps
project_urls =
    Bug Tracker = https://github.com/akhilsadam/perceptual-jp-colormaps/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = =src
packages = jpcm,jpcm/core,jpcm/load
python_requires = >=3.6

[options.packages.find]
where = src