[metadata]
name = jpcm
version = 0.1.24
author = Akhil Sadam
author_email = sadam.akhil@gmail.com
description = A perceptually uniform colormap generator for Matplotlib equipped with traditional-ish Japanese colors to serve as a fixed color palette. Designed to allow unique colormap generation.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akhilsadam/perceptual-jp-colormaps
project_urls =
    Bug Tracker = https://github.com/akhilsadam/perceptual-jp-colormaps/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = =src
packages = jpcm,jpcm/core,jpcm/load,jpcm/utils
python_requires = >=3.8
install_requires =
    setuptools>=42
    wheel
    colour-science==0.3.16
	numpy==1.23.5
	scipy
	pynverse
	matplotlib>=3.3.4
    networkx>=2.5
[options.packages.find]
where = src
