[metadata]
name = jpcm
version = 0.1.26
author = Akhil Sadam
author_email = sadam.akhil@gmail.com
description = A perceptually uniform colormap generator equipped with a traditional-ish Japanese color palette. Allows unique colormap generation and integration with ML experiment workflows.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/akhilsadam/perceptual-jp-colormaps
project_urls =
    Bug Tracker = https://github.com/akhilsadam/perceptual-jp-colormaps/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = =src
packages = jpcm,jpcm/core,jpcm/load,jpcm/utils,jpcm/draw
python_requires = >=3.8
install_requires =
    setuptools>=42
    wheel
    colour-science>=0.3.16
	numpy>=1.23.5
	scipy
	pynverse
	matplotlib>=3.3.4
    networkx>=2.5
    ffmpeg-python
	tqdm
	einops
[options.packages.find]
where = src
